[package]
name = "mamba"
version = "0.2.0"
authors = ["Joel Abrahams <abrahamsjo@gmail.com>"]
description = "A transpiler which translates Mamba to Python 3 files"
edition = "2018"
license-file = "LICENSE"

readme = "README.md"
documentation = "http://joelabrahams.nl/mamba_doc/"
repository = "https://github.com/JSAbrahams/mamba"
keywords = [ "python", "transpiler", "compiler"]
categories = [ "parsing" ]

[badges]
appveyor = { repository = "JSAbrahams/mamba", branch = "master", service = "github" }
travis-ci = { repository = "JSAbrahams/mamba", branch = "master" }

[dependencies]
assert_cmd = "0.10"
python-parser = "0.1.0"
clap = {version = "2.33", features = ["yaml"]}
leg = "0.1.3"
pathdiff = "0.1.0"
glob = "0.3.0"
