[package]
name = "mamba"
version = "0.3.6"
authors = ["Joël Abrahams <abrahamsjo@gmail.com>"]
description = "A transpiler which converts Mamba files to Python 3 files"
edition = "2021"
license-file = "LICENSE"
rust-version = "1.76.0"

readme = "README.md"
repository = "https://github.com/JSAbrahams/mamba"
keywords = ["python", "transpiler", "compiler"]
categories = ["parsing"]

[dependencies]
ansi_term = "0.12.1"
assert_cmd = "2.0.16"
clap = { version = "2.33", features = ["yaml"] }
glob = "0.3.1"
itertools = "0.13.0"
log = "0.4.22"
loggerv = "0.7"
pathdiff = "0.2.1"
permutate = "0.3.2"
python-parser = "0.1.0"
tempfile = "3.13.0"
